# cloud-cost

./: .gitignore  README.md  pyproject.toml  sentra-private-key.pem
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
backend/: README.md  requirements.txt
backend/app/: config.py  main.py
config/: README.md
docs/: architecture.md  decision-log.md  roadmap.md  vision.md
examples/insecure/: insecure.tf
examples/secure/: secure.tf
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infrastructure/: README.md
remediation_engine/: README.md  autofix_policy.py  remediation_registry.py
remediation_engine/diff_generators/: diff_helper.py
remediation_engine/explainers/: aws_explainers.py  base_explainer.py
remediation_engine/fixers/: aws_db_unencrypted_fixer.py  aws_iam_wildcard_fixer.py  aws_s3_public_fixer.py  aws_sg_open_fixer.py  base_fixer.py
remediation_engine/templates/: db_encrypt.template  iam_wildcard_fix.template  s3_acl_fix.template  sg_restrict.template
remediation_engine/validators/: syntax_validator.py
scanner_engine/: README.md  rule_registry.py
scanner_engine/outputs/: README.md  json_output.py
scanner_engine/parsers/: README.md  ignore_parser.py  tf_parser.py
scanner_engine/rules/: README.md  aws_db_unencrypted_rule.py  aws_iam_wildcard_rule.py  aws_s3_public_rule.py  aws_sg_open_rule.py  base_rule.py
scanner_engine/terraform/: README.md
scripts/: README.md  scan.py  validate_real_world.py
shared/: README.md
shared/constants/: README.md  (+4 more)
tests/: README.md
(+32 files in other folders)
