[project]
name = "sentra-ai"
version = "0.1.0"
description = "Automated cloud security scanning and remediation tool for Terraform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-hcl2>=0.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "pyjwt[crypto]>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
